tests/ui/occurs-check-3.stderr
error[E0275]: overflow evaluating the requirement `Clam<_> <: _`
  --> $DIR/occurs-check-3.rs:6:9
   |
LL |     c = Clam::A(c);
   |         ^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
